asg4/dot.score/test1/bad.log
pmake: gcc bad.c -o bad
bad.c:3:1: error: unknown type name ‘This’
    3 | This is a bad file.
      | ^~~~
bad.c:3:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘a’
    3 | This is a bad file.
      |         ^
bad.c:3:9: error: unknown type name ‘a’
bad.c:4:7: warning: missing terminating ' character
    4 | cc won't compile it.
      |       ^
bad.c:4:7: error: missing terminating ' character
    4 | cc won't compile it.
      |       ^~~~~~~~~~~~~~
pmake: Error 1
